fix(core): apply logLevels as threshold instead of forcing level